<resources>
    <string name="app_name">WorkChat</string>
    <string name="profile">Профиль</string>

    <string name="search">Поиск</string>
    <string name="channels">Каналы</string>
    <string name="people">Люди</string>

    <string name="add_emoji">Добавить эмоджи</string>
    <string name="write_message">Написать…</string>
    <string name="log_out">Выйти</string>

    <string name="deleted_message">Сообщение удалено</string>

    <string name="online">Online</string>
    <string name="idle">Idle</string>

    <string name="no_messages">Нет сообщений</string>
    <string name="no_channels">Нет каналов</string>
    <string name="no_people">Нет людей</string>
    <string name="hide">Скрыть</string>
    <string name="retry">Повторить</string>

    <string name="reaction">Реакция</string>
    <string name="copy">Копировать</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>

    <string name="copied">Скопированно</string>
    <string name="error">Ошибка</string>

    <string name="create">Создать</string>
    <string name="channel">Канал</string>
    <string name="topic">Топик</string>

    <string name="channel_name">Имя канала</string>
    <string name="topic_name">Имя топика</string>
    <string name="description">Описание</string>
    <string name="message">Сообщение</string>

    <string name="next">Далее</string>

    <string name="network_error">Ошибка. Проверьте подключение к интернету!</string>
    <string name="database_error">Ошибка загрузки данных.</string>
    <string name="file_format_error">Ошибка чтения файла</string>
    <string name="file_size_error">Слишком большой файл</string>
</resources>