<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reactionButton"
        style="@style/Theme.WorkChat.Button.MessageAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reaction"
        app:icon="@drawable/ic_emoji"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/copyButton"
        style="@style/Theme.WorkChat.Button.MessageAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        app:icon="@drawable/ic_copy"
        app:layout_constraintTop_toBottomOf="@id/reactionButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        style="@style/Theme.WorkChat.Button.MessageAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:icon="@drawable/ic_edit"
        app:layout_constraintTop_toBottomOf="@id/copyButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        style="@style/Theme.WorkChat.Button.MessageAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/red"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/editButton" />

</androidx.constraintlayout.widget.ConstraintLayout>